Background-attachement:fixed doesn't work on iOS7. Testing different options...

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -216,6 +216,10 @@ button.button {
 ---------------------- */
 @media (max-width: 1024px) {
 
+	#about {
+		background-attachement: scroll;
+	}
+
 	#value {
 		.col-md-6:last-child {
 			margin-top: 40px;
